6e01f6b Merge branch 'master' into f/highlight

--- a/elements/form/Form.scss
+++ b/elements/form/Form.scss
@@ -396,6 +396,11 @@ novo-form {
                         border-bottom: 1px solid $negative !important;
                       }
                     }
+                    &.highlighted {
+                      input {
+                        background-color: lighten($ocean, 35%) !important;
+                      }
+                    }
                     textarea {
                       font-size: 1em;
                       height: 2rem;
