fa32852 BH-71324 fix

--- a/elements/chips/Chips.scss
+++ b/elements/chips/Chips.scss
@@ -209,6 +209,12 @@ novo-entity-chips {
           color: $neutral;
         }
       }
+      &.jobshift {
+        color: $positive;
+        i {
+          color: $jobShift;
+        }
+      }
     }
   }
   picker-results {
