ff23f03 Changes from review. Pulling out limit to new input.

--- a/elements/data-table/data-table.component.scss
+++ b/elements/data-table/data-table.component.scss
@@ -290,6 +290,9 @@ cdk-table {
     cursor: pointer;
     i {
       cursor: pointer;
+      &.bhi-checkbox-disabled {
+        cursor: not-allowed !important
+      }
       &.bhi-checkbox-empty {
         color: #d2d2d2;
       }
