23e7de1 feat(data-table): Added word overflow wrap to column headers

--- a/elements/data-table/data-table.component.scss
+++ b/elements/data-table/data-table.component.scss
@@ -224,7 +224,8 @@ cdk-table {
 
 .novo-data-table-header-cell {
   border-left: 1px solid $off-white;
-  white-space: nowrap;
+  white-space: normal;
+  overflow-wrap: break-word;
   display: flex;
   align-items: center;
   + .button-header-cell,
