51f6474 Merge branch 'master' into f/highlight-select

--- a/elements/form/Form.scss
+++ b/elements/form/Form.scss
@@ -397,7 +397,8 @@ novo-form {
                       }
                     }
                     &.highlighted {
-                      input {
+                      input,
+                      novo-select {
                         background-color: lighten($ocean, 35%) !important;
                       }
                     }
