d348d0e Merge d1c4b2a1db66aaa2abb1a159f3ba9c3f2138c6a3 into 31a1337fb09242d9849516e3018a42fde775e2b4

--- a/elements/switch/Switch.scss
+++ b/elements/switch/Switch.scss
@@ -36,7 +36,7 @@ $switch-thumb-size: 20px !default;
     height: $switch-height;
     position: relative;
     user-select: none;
-    margin-right: 8px;
+    margin: 0 8px;
   }
   &:not(.novo-switch-disabled) {
     &.novo-switch-dragging .novo-switch-container,
