f4c8b04 Merge e82b395f666e99b8b406b730ef65e9fff0655544 into 73a6bf4f137b61800d92cd5c585341b5f641f46a

--- a/elements/data-table/data-table.component.scss
+++ b/elements/data-table/data-table.component.scss
@@ -623,7 +623,7 @@ novo-data-table-pagination {
       }
       .page.active {
         color: $company;
-        background-color: $off-white;
+        background-color: rgba($black, 0.1);
         opacity: 1;
       }
     }
