2107a1f Merge d02dd65b45d730e9b7280fd329baf5745bc1e86a into 1fb93a0aed1414a49206c389999d8a51f9f53eaa

--- a/elements/button/styles/button-other.scss
+++ b/elements/button/styles/button-other.scss
@@ -30,7 +30,7 @@
     border-bottom: 1px solid var(--border);
     border-radius: 0;
     color: var(--text-main);
-    padding: 0;
+    padding: 0 2px 0 0;
     height: 2rem;
     min-height: 2rem;
     position: relative;
