--- a/elements/calendar/calendar.component.scss
+++ b/elements/calendar/calendar.component.scss
@@ -30,7 +30,7 @@
   width: 100%;
   text-align: center;
   background: var(--background-bright);
-  color: var(--text-bright);
+  color: var(--text-main);
   position: relative;
   user-select: none;
 
