--- a/styles/themes/dark.scss
+++ b/styles/themes/dark.scss
@@ -7,8 +7,8 @@
   --selection: #{$color-ocean}; // #1c76c5;
   --text-selection: #{$color-white};
   --text-main: #{$color-light};
-  --text-bright: #{$color-white};
-  --text-muted: #a9b1ba;
+  --text-muted: #{$color-stone};
+  --text-disabled: #a9b1ba;
   --links: #{$color-sky-blue}; // #41adff;
   --focus: #0096bfab;
   --border: #{$color-onyx};
