--- a/elements/calendar/month-view/month-view.component.scss
+++ b/elements/calendar/month-view/month-view.component.scss
@@ -33,12 +33,12 @@
       font-weight: normal;
       border-radius: 3px;
       &.selected {
-        background-color: $positive;
+        background-color: var(--selection);
         color: #fff;
       }
       &:hover {
         cursor: pointer;
-        background-color: $positive;
+        background-color: var(--selection);
         color: #fff;
       }
     }
@@ -60,7 +60,7 @@
         outline: none;
       }
       &:disabled {
-        color: var(--text-muted, #d7d9e4);
+        color: var(--text-disabled);
         cursor: not-allowed !important;
         box-shadow: none !important;
       }
@@ -69,13 +69,13 @@
       display: table-cell;
 
       &.notinmonth,
-      &.noinmonth > novo-button.day {
-        color: var(--text-muted, #d7d9e4);
+      &.notinmonth:not(.selected) > .day {
+        color: var(--text-disabled);
       }
       &:hover {
         .day {
           cursor: pointer;
-          box-shadow: inset 0 0 0 2px $positive;
+          box-shadow: inset 0 0 0 2px var(--selection);
         }
       }
       &.inRange:hover {
@@ -85,7 +85,7 @@
       }
 
       &.inRange {
-        background: $positive;
+        background: var(--selection);
         color: #fff;
         height: 3.2rem;
         width: 3.2rem;
@@ -118,7 +118,7 @@
           content: "";
           position: absolute;
           height: 100%;
-          background: #4a89dc;
+          background: var(--selection);
           width: 10px;
           top: 0;
           left: -5px;
@@ -127,13 +127,13 @@
       }
       &.selected {
         .day {
-          background: $positive;
+          background: var(--selection);
           color: #fff;
         }
       }
       &.preview:not(.previewStart):not(.previewEnd) {
         .day {
-          border: 1px dashed $positive;
+          border: 1px dashed var(--selection);
         }
         &.selected {
           .day {
