--- a/elements/form/ControlGroup.scss
+++ b/elements/form/ControlGroup.scss
@@ -115,7 +115,7 @@ novo-control-group {
         box-sizing: border-box;
         flex: 1;
         > span {
-          color: var(--text-muted, #9e9e9e);
+          color: var(--text-muted);
           font-size: 1rem;
           font-weight: 500;
           text-transform: uppercase;
