007d0e5 Merge 368a7f27e8a5bce8bdd98e61edba789b414ed26c into 4c064b78fe7e689d2123365bbce4de421118155a

--- a/elements/dropdown/Dropdown.scss
+++ b/elements/dropdown/Dropdown.scss
@@ -3,7 +3,7 @@
 novo-dropdown {
   display: inline-block;
   position: relative;
-
+  outline: none;
   .novo-dropdown-trigger {
     cursor: pointer;
     -webkit-appearance: none;
