--- a/elements/icon/Icon.scss
+++ b/elements/icon/Icon.scss
@@ -24,6 +24,7 @@ novo-icon {
     width: 1em;
     height: 1em;
     color: inherit;
+    outline: none;
     &:before {
       color: inherit;
     }
