--- a/elements/data-table/data-table.component.scss
+++ b/elements/data-table/data-table.component.scss
@@ -157,7 +157,7 @@ cdk-table {
     pointer-events: all;
     margin-left: 0.5rem;
     line-height: 1em;
-
+    outline: none;
     &:hover {
       color: var(--text-main);
     }
@@ -623,7 +623,7 @@ novo-data-table-pagination {
       }
       .page.active {
         color: $company;
-        background-color: $off-white;
+        background-color: rgba($black, 0.1);
         opacity: 1;
       }
     }
